# Promptzl

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE.md  README.md  RELEASES.md  pyproject.toml  test-requirements.txt  test.ipynb  test2.ipynb  tox.ini
.github/workflows/: python-package.yml
docs/: conf.py  index.rst  modules.rst  promptzl.rst  requirements.txt
docs/source/: __conf.py  background.rst  benchmark.rst  conf.py  index.rst  lm_classifiers.rst  prompt.rst  tutorial_causal_lms.rst  tutorial_init.rst  tutorial_masked_lms.rst  tutorial_workflow.rst  utils.rst
notebooks/: test2.ipynb  test3.ipynb
promptzel/: __init__.py  model.py  pattern.py
promptzl/: __init__.py  classes.py  model.py  modules.py  pattern.py  prompt.py  utils.py
source/: conf.py  index.rst
tests/: test_basics.py  test_classification.py  test_errors.py  test_functions.py  test_op_classify.py  test_prompt.py  test_utils.py
