[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "promptzl"
version = "0.2.0"
description = "Promptzl - LLMs as Classifiers"
readme = "README.md"
authors = [
    { name = "Philipp Koch", email = "PhillKoch@protonmail.com" }
]
license = { file = "LICENSE" }
keywords = ["llm", "nlp", "transformers", "classifiers", "predictive modeling", "machine learning", "torch", "huggingface"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

requires-python = ">=3.9"
dependencies = [
    "datasets",
    "numpy",
    "pandas",
    "polars",
    "torch>=2.0.0",
    "tqdm",
    "transformers>=4.0.0",
]

[tool.setuptools]
packages = ["promptzl"]

[project.urls]
homepage = "https://github.com/LazerLambda/Promptzl"
"Source Code" = "https://github.com/LazerLambda/Promptzl"

[tool.setuptools.dynamic]
optional-dependencies.test = { file = ["test-requirements.txt"] }

[tool.ruff]
select = ["D"]
exclude = ["tests", "tests/*", "source/"]

[tool.ruff.lint.pydocstyle]
convention = "google"
