[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "promptzl"
version = "0.9.3"
description = "Promptzl - LLMs as Classifiers"
readme = "README.md"
authors = [
    { name = "Philipp Koch", email = "PhillKoch@protonmail.com" }
]
license = { file = "LICENSE" }
keywords = ["llm", "nlp", "transformers", "classifiers", "predictive modeling", "machine learning", "torch", "huggingface", "zero-shot", "prompting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.9"
dependencies = [
    "datasets",
    "numpy<2.0.0",
    "pandas",
    "polars",
    "torch>=2.0.0",
    "tqdm",
    "transformers>=4.0.0",
]

[tool.setuptools]
packages = ["promptzl"]

[project.urls]
homepage = "https://promptzl.readthedocs.io/en/latest/"
Repository = "https://github.com/LazerLambda/Promptzl"
Issues = "https://github.com/LazerLambda/Promptzl/issues"

[tool.setuptools.dynamic]
optional-dependencies.test = { file = ["test-requirements.txt"] }

[tool.ruff]
select = ["D"]
exclude = ["tests", "tests/*", "source/"]

[tool.ruff.lint.pydocstyle]
convention = "google"
